[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'

[project]
name = 'pint-models'
version = '0.0.1'
description = 'Contains a set of models and utilites for SUSE Pint Server.'
readme = 'README.md'
authors = [
  {name = 'SUSE', email = 'public-cloud-dev@susecloud.net' }
]
dependencies = [
  'SQLAlchemy',
  'psycopg2-binary'
]
requires-python = '>=3.9'
license = {text = 'Apache-2.0'}
keywords = ['pint_models', 'pint-models']
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Environment :: Console',
    'Intended Audience :: Developers',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'License :: OSI Approved :: Apache Software License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3.14',
]

[project.urls]
'Homepage' = 'https://github.com/SUSE-Enceladus/public-cloud-info-models'

[project.optional-dependencies]
dev = ['bumpversion', 'coverage', 'flake8', 'pytest-cov']
test = ['coverage', 'flake8', 'pytest-cov']

[tool.setuptools.package-dir]
pint_models = 'pint_models'
